@@ -1,0 +1,28 @@
+# Copyright (c) 2008 Fabien Tassin <fta@sofaraway.org>
+# Description: Project firefox 3.1
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License as
+# published by the Free Software Foundation; either version 2, or (at
+# your option) any later version.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program; if not, write to the Free Software Foundation, Inc.,
+# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+
+MOZCLIENT_APPNAME    = firefox-3.1
+MOZCLIENT_PROJECT    = mozilla-1.9.1
+MOZCLIENT_VCS        = hg
+MOZCLIENT_VCS_LOC    = http://hg.mozilla.org/releases/
+MOZCLIENT_FILE       = mozilla/browser/config/version.txt
+MOZCLIENT_GETVERSION = sed -e 's/pre//; s/\([ab]\)\([0-9]*\)/~\1\2/' mozilla/browser/config/version.txt
+#MOZCLIENT_POSTCOCMD  = cd mozilla && python client.py checkout
+MOZCLIENT_GETDATE    = wget -O - -q --read-timeout=10 --user-agent='' --tries=3 http://hg.mozilla.org/releases/mozilla-1.9.1/log 2> /dev/null | grep cite | head -1 | sed -e 's,.*</cite>,,' | perl -e '$m = { "Jan" => 1, "Feb" => 2, "Mar" => 3, "Apr" => 4, "May" => 5, "Jun" => 6, "Jul" => 7, "Aug" => 8, "Sep" => 9, "Oct" => 10, "Nov" => 11, "Dec" => 12 } ; $a = <>; $a =~ m/^ - \S+,\s+(\d+) (\S+) (\d+) \S+ \S+ - rev (\d+)/ && do { printf "%04d%02d%02dr%d\n", $3, $$m{$2}, $1, $4 }; '
+MOZCLIENT_EMBEDDED   = 1
+MOZCLIENT_WANTMOZDIR = 1
+MOZCLIENT_POSTCOCMD  = bzr branch lp:~mozillateam/firefox/awesome-browser-branding && mv awesome-browser-branding mozilla/browser/branding/awesome-browser
