@@ -1,12 +1,20 @@
 firefox-3.1 (3.1~b2+build1+nobinonly-0ubuntu2) UNRELEASED; urgency=low
 
+  [ Alexander Sack ]
   * improve reload plugins patch; dont rename function
     - update debian/patches/bzXXX_reload_new_plugins.patch 
   * forward reload plugins patch upstream
     - debian/patches/bzXXX_reload_new_plugins.patch => 
         bz460917_att350845_reload_new_plugins.patch
 
- -- Alexander Sack <asac@ubuntu.com>  Tue, 02 Dec 2008 00:19:39 +0100
+  [ Fabien Tassin ]
+  * Move mozclient project files from mozilla-descripts to this package
+    and update the upstream branch now that it has moved to 3.2
+    - add debian/mozclient/firefox-3.1.conf
+    - add debian/mozclient/firefox-3.1.mk
+    - update debian/rules
+
+ -- Fabien Tassin <fta@ubuntu.com>  Sun, 21 Dec 2008 22:35:23 +0100
 
 firefox-3.1 (3.1~b2+build1+nobinonly-0ubuntu1) jaunty; urgency=low
 
